# SHARE

./: ISSUES.md  docker-compose.yml  pyproject.toml  requirements.txt  run
share/harvesters/: gov_nih.py
share/sources/gov.clinicaltrials/: source.yaml
share/sources/gov.nih/: source.yaml
share/sources/gov.pubmedcentral/: source.yaml
share/sources/io.osf/: source.yaml
share/sources/org.arxiv/: source.yaml
share/sources/org.biorxiv/: source.yaml
share/sources/org.engrxiv/: source.yaml
share/sources/org.psyarxiv/: source.yaml
share/sources/org.socarxiv/: source.yaml
share/transformers/: gov_nih.py  gov_pubmedcentral_pmc.py
templates/admin/: harvest.html
tests/share/harvesters/: test_gov_nih_harvester.py
