[tool.poetry]
name = "share"
version = "21.3.1"
description = ""
authors = ["Sitch <sitch@sitch.com>"]
packages = [
  { include = "api" },
  # { include = "bin" },
  # { include = "bots" },
  # { include = "osf_oauth2_adapter" },
  # { include = "project" },
  { include = "share" },
  # { include = "templates" },
]
include = ["share/schema/schema-spec.yaml"]

[tool.poetry.dependencies]
python = "^3.6"
bcrypt = "3.2.0"
beautifulsoup4 = "4.9.3"
celery = "5.1.2"
colorlog = "5.0.1"
django-allauth = "0.44.0"
django-celery-beat = "2.2.1"
django-cors-headers = "3.7.0"
django-extensions = "3.1.3"
django-filter = "2.4.0"
django-model-utils = "4.1.1"
django-oauth-toolkit = "1.2.0"
django-prettyjson = "0.4.1"
django-revproxy = "0.10.0"
Django = "3.2.5"
djangorestframework = "3.12.4"
docopt = "0.6.2"
elasticsearch = "5.4.0"
furl = "2.1.2"
gevent = "21.1.2"
jsonschema = "3.2.0"
lxml = "4.6.3"
kombu = "5.1.0"
nameparser = "1.0.6"
networkx = "2.5.1"
newrelic = "6.4.4.161"
pendulum = "2.1.1"
Pillow = "8.3.1"
psycogreen = "1.0.2"
psycopg2 = "2.8.6"
python-dateutil = "2.8.1"
PyJWE = "1.0.0"
PyYAML = "5.4.1"
raven = "6.10.0"
requests = "2.25.1"
stevedore = "3.3.0"
xmltodict = "0.12.0"
remote-pdb = "2.1.0"
pdbpp = "0.10.3"
watchdog = { version = "2.1.6", extras = ["watchmedo"] }

[tool.poetry.dev-dependencies]
behave = "1.2.6"
coveralls = "3.1.0"
django-debug-toolbar = "3.2.1"
factory-boy = "3.2.0"
Faker = "8.10.0"
flake8 = "3.9.2"
httpretty = "1.1.3"
pytest-benchmark = "3.4.1"
pytest = "6.2.4"
pytest-django = "4.4.0"
jedi = "0.18.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
